--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/background_white"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -69,6 +70,19 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/login_validation_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginTop="7dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/login_validation_error"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/login_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
@@ -77,7 +91,7 @@
             android:text="@string/login_error"
             android:textColor="@color/red"
             android:textSize="12sp"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/login_button"
@@ -108,6 +122,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/create_account_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
