--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,32 +5,37 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:background="@color/background_white"
     tools:layout_editor_absoluteX="4dp"
-    tools:layout_editor_absoluteY="27dp">
+    tools:layout_editor_absoluteY="27dp"
+    tools:context=".MainActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="37dp"
-        android:scrollbars="none"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+<!--    <ScrollView-->
+<!--        android:id="@+id/scrollView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:scrollbars="none"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="start">
 
                 <TextView
                     android:layout_width="0dp"
@@ -48,6 +53,7 @@
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_weight="0.1"
+                    android:layout_marginTop="5dp"
                     android:layout_marginHorizontal="10dp"
                     android:src="@drawable/ic_profile"/>
 
@@ -106,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginVertical="10dp">
+                android:layout_marginVertical="5dp">
 
                 <!-- Diagram Carbo Section -->
                 <LinearLayout
@@ -123,8 +129,8 @@
                         <ProgressBar
                             android:id="@+id/progress_carbs"
                             style="?android:attr/progressBarStyleHorizontal"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
                             android:layout_centerInParent="true"
                             android:indeterminate="false"
                             android:max="55"
@@ -167,8 +173,8 @@
                         <ProgressBar
                             android:id="@+id/progress_protein"
                             style="?android:attr/progressBarStyleHorizontal"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
                             android:layout_centerInParent="true"
                             android:indeterminate="false"
                             android:max="55"
@@ -213,8 +219,8 @@
                         <ProgressBar
                             android:id="@+id/progress_fat"
                             style="?android:attr/progressBarStyleHorizontal"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
                             android:layout_centerInParent="true"
                             android:indeterminate="false"
                             android:max="55"
@@ -253,20 +259,16 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/primary"
                 android:layout_marginTop="10dp"
-                android:drawableLeft="@drawable/ic_calender"
-                android:drawableTint="@android:color/white"
                 android:text="@string/today"
-                android:fontFamily="@font/poppins_bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppins_bold"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="@string/meals"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="@color/text_black"
                 android:fontFamily="@font/poppins_bold" />
 
@@ -279,7 +281,7 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
+                    android:layout_height="50dp"
                     android:paddingBottom="5dp"
                     android:src="@drawable/yourmeals"/>
 
@@ -288,7 +290,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/addfood_dashboard"
-                    android:textSize="18sp"
+                    android:textSize="15sp"
                     android:paddingHorizontal="10dp"
                     android:layout_gravity="center"
                     android:textColor="@android:color/black"
@@ -297,8 +299,8 @@
                 <ImageView
                     android:id="@+id/plus"
                     android:layout_gravity="center"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/ic_plus" />
 
             </LinearLayout>
@@ -307,7 +309,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/today_eating_history_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="match_parent"
+                />
 
             <!-- Height and weight Section -->
 <!--            <TextView-->
@@ -442,6 +445,6 @@
 
         </LinearLayout>
 
-    </ScrollView>
+<!--    </ScrollView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
