--- a/app/src/main/res/layout/activity_search_food.xml
+++ b/app/src/main/res/layout/activity_search_food.xml
@@ -14,25 +14,40 @@
         android:layout_height="48dp"
         android:layout_gravity="start"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="37dp"
+        android:layout_marginVertical="20dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/back_button_desc"
         android:src="@drawable/ic_back_arrow"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/calorie"
-        android:textSize="18sp"
-        android:textColor="@color/text_black"
         android:fontFamily="@font/poppins_bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/calorie"
+        android:textColor="@color/text_black"
+        android:textSize="18sp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toStartOf="@+id/backButtonDummy"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/backButton" />
+        app:layout_constraintStart_toEndOf="@+id/backButton"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/backButtonDummy"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="start"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/back_button_desc"
+        android:src="@drawable/ic_back_arrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -88,7 +103,7 @@
         android:id="@+id/foodRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/searchButton"
         app:layout_constraintBottom_toBottomOf="parent"
