--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/background_white"
     tools:context=".InputPersonalDataActivity">
 
     <LinearLayout
@@ -135,6 +136,7 @@
                 android:id="@+id/male_rdb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:buttonTint="@color/primary"
                 android:text="@string/male"
                 android:textColor="@color/text_black"
                 android:textColorHint="@color/text_black"
@@ -142,13 +144,13 @@
                 android:fontFamily="@font/poppins"
                 android:minHeight="0dp"
                 android:minWidth="48dp"
-                android:layout_marginStart="0dp"
-                />
+                android:layout_marginStart="0dp"/>
 
             <RadioButton
                 android:id="@+id/female_rdb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:buttonTint="@color/primary"
                 android:text="@string/female"
                 android:textColor="@color/text_black"
                 android:textColorHint="@color/text_black"
@@ -189,6 +191,17 @@
             android:visibility="visible" />
 
         <TextView
+            android:id="@+id/email_exists_error"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:fontFamily="@font/poppins_light"
+            android:text="@string/email_exists_error"
+            android:textColor="@color/red"
+            android:textSize="12sp"
+            android:visibility="visible" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
@@ -205,7 +218,7 @@
             android:backgroundTint="@color/primary"
             android:fontFamily="@font/poppins_bold"
             android:padding="10dp"
-            android:text="@string/finish"
+            android:text="@string/signup_big"
             android:textColor="@color/white"
             android:textSize="14sp" />
 
@@ -226,6 +239,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/signin_link"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
