--- a/app/src/main/res/layout/recyclerview_today_eating_history.xml
+++ b/app/src/main/res/layout/recyclerview_today_eating_history.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
     app:cardCornerRadius="4dp"
-    app:cardBackgroundColor="@color/background_white">
+    app:cardBackgroundColor="@color/background_white"
+    app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,13 +25,14 @@
                 android:layout_weight="1"
                 android:text="Nasi goreng (200 g)"
                 android:fontFamily="@font/poppins"
-                android:textSize="15sp"/>
+                android:textColor="@color/text_black"
+                android:textSize="14sp"/>
 
             <ImageView
                 android:id="@+id/delete"
                 android:layout_gravity="center_vertical"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:src="@drawable/delete" />
 
         </LinearLayout>
