Add app icon and cleaning up the code

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,29 +2,43 @@
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+    android:viewportWidth="126"
+    android:viewportHeight="126">
+  <group android:scaleX="0.73"
+      android:scaleY="0.73"
+      android:translateX="17.01"
+      android:translateY="17.01">
+    <path
+        android:pathData="M0,0h126v126h-126z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="16.38"
+            android:startY="131.88"
+            android:endX="144.48"
+            android:endY="-11.76"
+            android:type="linear">
+          <item android:offset="0.06" android:color="#FF531C20"/>
+          <item android:offset="0.31" android:color="#FF70292E"/>
+          <item android:offset="1" android:color="#FFD64E58"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M54.33,68.99C54.33,67 54.74,65.24 55.56,63.7C56.4,62.16 57.52,60.98 58.94,60.14C60.38,59.27 61.96,58.84 63.69,58.84C65.25,58.84 66.61,59.15 67.76,59.78C68.94,60.38 69.87,61.13 70.57,62.04V59.16H74.71V79H70.57V76.05C69.87,76.98 68.92,77.76 67.72,78.39C66.52,79.01 65.16,79.32 63.62,79.32C61.92,79.32 60.36,78.89 58.94,78.03C57.52,77.14 56.4,75.92 55.56,74.36C54.74,72.77 54.33,70.98 54.33,68.99ZM70.57,69.06C70.57,67.7 70.28,66.51 69.7,65.5C69.15,64.49 68.42,63.72 67.51,63.2C66.6,62.67 65.61,62.4 64.56,62.4C63.5,62.4 62.52,62.67 61.6,63.2C60.69,63.7 59.95,64.46 59.37,65.46C58.82,66.45 58.54,67.62 58.54,68.99C58.54,70.36 58.82,71.56 59.37,72.59C59.95,73.62 60.69,74.42 61.6,74.97C62.54,75.5 63.52,75.76 64.56,75.76C65.61,75.76 66.6,75.5 67.51,74.97C68.42,74.44 69.15,73.67 69.7,72.66C70.28,71.63 70.57,70.43 70.57,69.06ZM84.2,52.36V79H80.1V52.36H84.2ZM96.79,79.32C95.23,79.32 93.83,79.05 92.58,78.5C91.35,77.92 90.38,77.15 89.66,76.19C88.94,75.21 88.56,74.12 88.51,72.92H92.76C92.83,73.76 93.23,74.46 93.95,75.04C94.69,75.59 95.61,75.87 96.72,75.87C97.87,75.87 98.76,75.65 99.38,75.22C100.03,74.76 100.36,74.19 100.36,73.49C100.36,72.75 99.99,72.2 99.27,71.84C98.58,71.48 97.46,71.08 95.93,70.65C94.44,70.24 93.23,69.84 92.29,69.46C91.35,69.08 90.54,68.49 89.84,67.7C89.17,66.9 88.83,65.86 88.83,64.56C88.83,63.51 89.15,62.55 89.77,61.68C90.39,60.8 91.28,60.1 92.43,59.6C93.61,59.09 94.95,58.84 96.47,58.84C98.72,58.84 100.54,59.42 101.9,60.57C103.29,61.7 104.04,63.24 104.14,65.21H100.03C99.96,64.32 99.6,63.62 98.95,63.09C98.3,62.56 97.43,62.3 96.32,62.3C95.24,62.3 94.41,62.5 93.84,62.91C93.26,63.32 92.97,63.86 92.97,64.53C92.97,65.06 93.17,65.5 93.55,65.86C93.93,66.22 94.4,66.51 94.95,66.72C95.51,66.92 96.32,67.17 97.4,67.48C98.84,67.86 100.02,68.26 100.93,68.67C101.87,69.05 102.67,69.63 103.34,70.4C104.01,71.16 104.36,72.18 104.39,73.46C104.39,74.58 104.07,75.59 103.45,76.48C102.83,77.37 101.94,78.06 100.79,78.57C99.66,79.07 98.33,79.32 96.79,79.32Z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M54.36,75.79C52.09,77.05 49.27,76.87 45.96,75.26L45.64,75.11H43.26L42.93,75.26C39.63,76.87 36.8,77.05 34.53,75.79C31.05,73.87 28.66,68.46 27.79,60.58C27.27,55.82 29.08,51.25 32.2,49.46C33.2,48.89 34.34,48.59 35.49,48.6C37.85,48.6 40.57,49.71 43.52,51.89L43.62,51.97C43.62,51.97 47.88,51.45 49.57,50.69C54.65,48.38 55.77,44.71 55.97,44.22C56.55,42.76 56.85,41.21 56.83,39.64C56.81,38.07 56.48,36.52 55.87,35.08L55.47,34.09L54.4,34.1C52.71,34.12 51.04,34.49 49.51,35.2C47.97,35.91 46.6,36.93 45.49,38.21C44.38,39.48 43.55,40.98 43.06,42.6C42.57,44.21 42.42,45.92 42.64,47.6C40.79,46.56 39,45.9 37.28,45.63C34.84,45.24 32.61,45.62 30.64,46.75C28.48,47.99 26.77,50.09 25.71,52.81C24.75,55.28 24.38,58.16 24.69,60.92C25.68,69.97 28.56,76.06 33.02,78.53C34.49,79.34 36.14,79.76 37.82,79.75C39.73,79.75 41.79,79.25 43.97,78.23H44.93C49.07,80.15 52.75,80.25 55.87,78.53L54.36,75.79ZM53.35,37.3C52.55,37.41 51.77,37.62 51.03,37.94C49.05,38.79 47.44,40.34 46.52,42.3C45.6,44.25 45.42,46.47 46.02,48.55C47.28,48.38 48.49,47.94 49.57,47.26C50.65,46.58 51.56,45.67 52.26,44.6C52.95,43.54 53.41,42.33 53.6,41.07C53.79,39.81 53.7,38.52 53.35,37.3Z"
+        android:strokeWidth="0.5"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"
+        android:strokeColor="#ffffff"/>
+    <path
+        android:pathData="M58.4,46.84C57.92,47.77 57.35,48.64 56.69,49.45C56.69,49.46 56.69,49.46 56.7,49.46C59.81,51.25 62.02,53.24 61.5,58H64.5C65.7,52 60.94,48.06 58.4,46.84Z"
+        android:fillColor="#7EAB3F"/>
+    <path
+        android:pathData="M61.5,58C62.02,53.24 59.81,51.25 56.7,49.46C56.69,49.46 56.69,49.46 56.69,49.45C57.35,48.64 57.92,47.77 58.4,46.84C60.94,48.06 65.7,52 64.5,58M61.5,58C62,58 63.3,58 64.5,58M61.5,58H64.5"
+        android:strokeWidth="0.5"
+        android:fillColor="#00000000"
+        android:strokeColor="#7EAB3F"/>
+  </group>
 </vector>
